<resources>
    <string name="app_name">Laboratorio 03</string>
    <string name="text_cantidad_dinero">Cantidad de dinero</string>
    <string name="text_initial_score">0</string>
    <string name="text_five_cents">$0.05</string>
    <string name="text_ten_cents">$0.10</string>
    <string name="text_quarter_cents">$0.25</string>
    <string name="text_one_dollar">$1.00</string>
    <string name="cantidad_dinero_text">Cantidad de dinero</string>
</resources>